--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ name: chatbot
 # UTC の 02:00 は JST だと 11:00 。
 # 曜日指定には [0, 6] の整数を使います。 0 が日曜日、 6 が土曜日です。
 # 実はgithub actionsのcronの時刻はUTCなので、日本時間に合わせるために日本時刻から9時間マイナスで設定する必要があります。
+# 詳しくは github actions on で検索、ワークフローをトリガーするイベント
 on:
 #   push:
   schedule:
